Changelog
=========

0.4.1 - Unreleased
------------------

0.4.0 - 2008-07-31
------------------

* Add inline validation support with KSS

* Require zope.component <= 3.4.0 to prevent compatibility issues with
  five.localsitemanager, of which a buggy version (0.3) is pinned by
  plone.recipe.plone 3.1.4.  Upgrade to this version if you're seeing::
    ...
      Module five.localsitemanager.registry, line 176, in registeredUtilities
    ValueError: too many values to unpack

0.3.2 - 2008-07-25
------------------

* Fixed a bug in macros.pt where 'has_groups' and 'show_default_label'
  for fieldsets were set in the 'form' macro, rendering the 'field'
  macro unusable by itself.

0.3.1 - 2008-07-24
------------------

* Fixed a bug where we would use the form macros defined in
  plone.z3cform instead of our own.

0.3 - 2008-07-24
----------------

* Create this package from Plone-specific bits that have been factored
  out of plone.z3cform.