@@ -21,7 +21,7 @@ Note that no Plone chickens were harmed in the implementation of the
 form.  The only Plone specific part comes now, where we wrap the form
 into a Plone layout and register it:
 
-  >>> from plone.app.z3cform.layout import wrap_form
+  >>> from plone.z3cform.layout import wrap_form
   >>> MyWrappedForm = wrap_form(MyForm)
 
 ``MyWrappedForm`` is the class that you can register as your view.
@@ -36,4 +36,10 @@ Let's make sure that we're rendering the Plone macros here.  Only
 these have a CSS class "horizontal":
 
   >>> 'class="horizontal"' in html
+  True
+
+We also want to make sure that we got the Plone version of the layout macro.
+This one uses a documentFirstHeading class for the main page title:
+
+  >>> 'class="documentFirstHeading"' in html
   True
